# equity-fair-value-terminal

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  RELEASE.md  package-lock.json  package.json
docs/: 00-project-overview.md  01-requirements.md  05-screen-spec.md  06-valuation-method-spec.md  08-python-sidecar-spec.md  09-error-handling-spec.md  10-build-and-distribution-spec.md  11-mvp-scope.md  12-codex-initial-prompt.md  13-release-readiness-checklist.md
frontend/: next.config.ts  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: candlestick-chart-panel.tsx  error-notice.tsx  language-toggle.tsx  loading-panel.tsx  result-card.tsx  (+4 more)
python-sidecar/: pyinstaller.spec  pyproject.toml  requirements.txt
python-sidecar/src/: main.py
python-sidecar/src/handlers/: __init__.py  chart.py  quote.py  search.py  valuation.py
python-sidecar/src/models/: __init__.py  request_models.py  response_models.py
python-sidecar/src/services/: __init__.py  cache_service.py  market_data_normalizer.py  yfinance_client.py
python-sidecar/src/utils/: __init__.py  dates.py  logging.py  numbers.py
python-sidecar/src/valuation/: __init__.py  common.py  constants.py  ddm.py  ev_ebitda_relative.py  pbr.py  per.py  relative_valuation.py  residual_income.py  simplified_dcf.py
scripts/: assert-frontend-dist.ps1  build-sidecar.ps1  build-windows-release.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  lib.rs  main.rs  models.rs
(+15 files in other folders)
