[package]
name = "equity-fair-value-terminal"
version = "0.1.0"
description = "Desktop stock valuation terminal foundation"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "equity_fair_value_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
wait-timeout = "0.2"

